Added deleted submodules in #7

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "toolchain/binutils-gdb"]
 	path = toolchain/binutils-gdb
 	url = git://sourceware.org/git/binutils-gdb.git
+[submodule "bootloader/edk2"]
+	path = bootloader/edk2
+	url = https://github.com/tianocore/edk2.git
+[submodule "bootloader/posix-uefi"]
+	path = bootloader/posix-uefi
+	url = https://gitlab.com/bztsrc/posix-uefi.git
