ignore everything from submodules and build bins

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ toolchain/edk2
 toolchain/gcc
 toolchain/posix-uefi
 
+qemu-fs/NvVars
+qemu-fs/bios.bin
+qemu-fs/bootloader.efi
+qemu-fs/kernel.efi
+
 # Clang
 .cache
 compile_commands.json
