--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,16 @@
 [submodule "toolchain/posix-uefi"]
 	path = toolchain/posix-uefi
 	url = https://gitlab.com/bztsrc/posix-uefi.git
+    ignore = all
 [submodule "toolchain/edk2"]
 	path = toolchain/edk2
 	url = https://github.com/tianocore/edk2.git
+    ignore = all
 [submodule "toolchain/binutils-gdb"]
 	path = toolchain/binutils-gdb
 	url = git://sourceware.org/git/binutils-gdb.git
+    ignore = all
 [submodule "toolchain/gcc"]
 	path = toolchain/gcc
 	url = https://github.com/gcc-mirror/gcc
+    ignore = all
