reduced cmake required version to 3.16
The one in ubuntu 20.04 repositories

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -2,7 +2,9 @@
 # Project #
 ###########
 
-# project general options
+# minimum cmake version
+cmake_minimum_required(VERSION 3.16)
+
 project(os-dev-kernel CXX ASM_NASM)
 
 # nasm is required to build the kernel
