--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,26 @@ set(QEMU_FS "${CMAKE_CURRENT_SOURCE_DIR}/qemu-fs")
 set(TOOLCHAINDIR "${CMAKE_CURRENT_SOURCE_DIR}/toolchain")
 set(TOOLCHAINBIN "${TOOLCHAINDIR}/build/toolchain/bin")
 
-set(EXECUTABLE_OUTPUT_PATH ${QEMU_FS})
-
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(kernel)
 add_subdirectory(bootloader)
 
-configure_file("${QEMU_FS}/Makefile.in" "${QEMU_FS}/Makefile")
+add_custom_target(create_img
+  DEPENDS bootloader.efi kernel create_img
+  BYPRODUCTS disk.img
+  COMMAND dd if=/dev/zero of=disk.img bs=1k count=1440
+  COMMAND mformat -i disk.img -f 1440 ::
+  COMMAND mmd -i disk.img ::/EFI
+  COMMAND mmd -i disk.img ::/EFI/BOOT
+  VERBATIM
+)
+
+add_custom_target(disk.img ALL
+  DEPENDS bootloader.efi kernel disk.img
+  BYPRODUCTS disk.img
+  COMMAND mcopy -n -o -i disk.img bootloader/bootloader.efi ::/EFI/BOOT/BOOTX64.EFI
+  COMMAND mcopy -n -o -i disk.img $<TARGET_FILE:kernel> ::
+  COMMAND mcopy -n -o -i disk.img ${TOOLCHAINDIR}/font/zap-light16.psf ::
+  VERBATIM
+)
