build disk.img and 0 rebuilds now :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,21 +13,19 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_subdirectory(kernel)
 add_subdirectory(bootloader)
 
-add_custom_target(create_img
-  DEPENDS bootloader.efi kernel create_img
-  BYPRODUCTS disk.img
+add_custom_command(OUTPUT disk.img
+  DEPENDS kernel bootloader
   COMMAND dd if=/dev/zero of=disk.img bs=1k count=1440
   COMMAND mformat -i disk.img -f 1440 ::
   COMMAND mmd -i disk.img ::/EFI
   COMMAND mmd -i disk.img ::/EFI/BOOT
-  VERBATIM
-)
-
-add_custom_target(disk.img ALL
-  DEPENDS bootloader.efi kernel disk.img
-  BYPRODUCTS disk.img
   COMMAND mcopy -n -o -i disk.img bootloader/bootloader.efi ::/EFI/BOOT/BOOTX64.EFI
   COMMAND mcopy -n -o -i disk.img $<TARGET_FILE:kernel> ::
   COMMAND mcopy -n -o -i disk.img ${TOOLCHAINDIR}/font/zap-light16.psf ::
+  COMMENT "asd"
   VERBATIM
+)
+
+add_custom_target(disk ALL
+  DEPENDS disk.img
 )
