trivial allocator to avoid bugs

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -147,6 +147,7 @@ set(KERNEL_SOURCES
 	acpi/acpi.cpp
 	pci/pci.cpp
 	heap/simple_allocator.cpp
+	heap/trivial_allocator.cpp
 	shell/command.cpp
 	shell/interpreter.cpp
 	${INTERRUPT_SOURCES}
